--- a/index.html
+++ b/index.html
@@ -42,17 +42,21 @@
                   <a id="nav-toggle" class="nav_slide_button" href="index.html#"><span></span></a>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-md-8 col-md-offset-1 inner">
+              <div class="row flex-container">
+                <div class="col-md-8 col-md-offset-1 inner text-content">
                   <div class="relative pambaba">
                     <h1 class="animated fadeInDown">
                       <span class="hiddens">
-                        J<span  style="color:#b40000;">O</span>HN </span> R<span style="color:#b40000;">O</span>I<br/>
-                        A<span style="color:#b40000">S</span>IA
+                        J<span style="color:#b40000;">O</span>HN
+                      </span> R<span style="color:#b40000;">O</span>I<br />
+                      A<span style="color:#b40000">S</span>IA
                     </h1>
-                    <h3 class="animated fadeInUp delay-05s"><span class="rotate">Graphic Desinger, Web Developer, UI/UX developer</span></h3><!-- Text Rotator -->
+                    <h3 class="animated fadeInUp delay-05s">
+                      <span class="rotate">Graphic Designer, Web Developer, UI/UX Developer</span>
+                    </h3>
                   </div>
                 </div>
+                <img class="DP" src="img/johnroi.png" alt="John Roi">
               </div>
               <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
@@ -252,61 +256,43 @@
 				</div>
 			</div>
 		</div>
-        <section class="text-center section-padding contact-wrap" id="contact">
-          <a href="index.html#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
-          <div class="container">
-            <div class="row">
+    <section class="text-center section-padding contact-wrap" id="contact">
+      <a href="index.html#top" class="up-btn"><i class="fa fa-chevron-up"></i></a>
+      <div class="container">
+          <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Drop <span>me</span> a line</h1>
+                  <h1 class="arrow">Drop <span>me</span> a line</h1>
               </div>
-            </div>
-            <div class="row contact-details">
-              <div class="col-md-4">
-                <div class="dark-box box-hover">
-                  <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-                  <p>Barangay Malaya, Sto Domingo, Nueva Ecija</p>
-                </div>
+          </div>
+          <div class="row contact-details">
+              <div class="col-md-3">
+                  <div class="dark-box box-hover">
+                      <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
+                      <p>Barangay Malaya, Sto Domingo, N.E.</p>
+                  </div>
               </div>
-              <div class="col-md-4">
-                <div class="dark-box box-hover">
-                  <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
-                  <p>+63 9183077562</p>
-                </div>
+              <div class="col-md-3">
+                  <div class="dark-box box-hover">
+                      <h2><i class="fa fa-mobile"></i><span>Phone</span></h2>
+                      <p>+63 9183077562</p>
+                  </div>
               </div>
-              <div class="col-md-4">
-                <div class="dark-box box-hover">
-                  <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="mailto:johnroiasia25@gmail.com">johnroiasia25@gmail.com</a></p>
-                </div>
+              <div class="col-md-3">
+                  <div class="dark-box box-hover">
+                      <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
+                      <p><a href="mailto:johnroiasia25@gmail.com">johnroiasia25@gmail.com</a></p>
+                  </div>
               </div>
-            </div>
-			<div class="row">
-			  <div class="col-md-6">
-			    <div id="googlemaps"></div>
-			  </div>
-			  <div class="col-md-6 contact">
-			     <form role="form">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Your name">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email address">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" placeholder="Write you message here..." style="height:232px;"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-send">
-                                Send message
-                            </button>
-                        </form>
-			  </div>
-			</div>
+              <div class="col-md-3">
+                  <div class="dark-box box-hover">
+                      <h2><i class="fa fa-file"></i><span>My Resume</span></h2>
+                      <p><a href="https://drive.google.com/file/d/1a4b1f2c40mxZNjMYVfqQsxVT791kexDl/view?usp=sharing" target="_blank">View My Resume</a></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  
 			<br>
             <div class="row">
               <div class="col-md-12">
@@ -333,33 +319,7 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeKBBPJTG3v5w3cNPAgM6ZsJiPyL1mP_o&amp;sensor=false"></script>
 	  <script src="js/main.js"></script>
 	  <script src="js/script.js"></script>
-    <script type="text/javascript">
 
-        google.maps.event.addDomListener(window, 'load', init);
-    
-        function init() {
-
-            var mapOptions = {
-
-                zoom: 15,
-                
-                scrollwheel: false,
-
-
-                center: new google.maps.LatLng(18.562784, 73.913526), 
-
-
-                styles: [	{		featureType:'water',		stylers:[{color:'#F2F2F2'},{visibility:'on'}]	},{		featureType:'landscape',		stylers:[{color:'#FFFFFF'}]	},{		featureType:'road',		stylers:[{saturation:-100},{lightness:45}]	},{		featureType:'road.highway',		stylers:[{visibility:'simplified'}]	},{		featureType:'road.arterial',		elementType:'labels.icon',		stylers:[{visibility:'off'}]	},{		featureType:'administrative',		elementType:'labels.text.fill',		stylers:[{color:'#ADADAD'}]	},{		featureType:'transit',		stylers:[{visibility:'off'}]	},{		featureType:'poi',		stylers:[{visibility:'off'}]	}]
-            };
-
-
-            var mapElement = document.getElementById('googlemaps');
-
-            var map = new google.maps.Map(mapElement, mapOptions);
-        }
-	
-    </script>
-	
     <script type="text/javascript">
     $(".rotate").textrotator({
       animation: "fade",
