--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </section>
 		<div class="container-fluid">
         <div>
-          <h1 class="arrow text-center">Projects</h1>
+          <h1 class="arrow text-center">Service</h1>
         </div>
         <br><br>
 			<div class="row color-bg">
@@ -192,7 +192,7 @@
           <div class="container">
             <div class="row">
               <h1 class="arrow">
-                Recent <span>Projects</span>
+                Certifications
               </h1>
             </div>
           </div>
@@ -202,28 +202,28 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/portfolio-01-large.png" data-lightbox="roadtrip" title="Capstone Project: Project Expenses Management System"><img class="grayscale" src="img/portfolio/portfolio-01-thumbnail.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/Aws s1.png" data-lightbox="roadtrip" title="Capstone Project: Project Expenses Management System"><img class="grayscale" src="img/portfolio/Aws s1.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/COLORWAVE.png" data-lightbox="roadtrip" title="LOGO MAKING: COLOR WAVE LOGO"><img class="grayscale" src="img/portfolio/COLORWAVE.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/Aws s2.png" data-lightbox="roadtrip" title="LOGO MAKING: COLOR WAVE LOGO"><img class="grayscale" src="img/portfolio/Aws s2.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/PEMS.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/PEMS.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/GL.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/GL.png" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/DAHON.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/DAHON Thumbnail.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/Oracle.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/Oracle.png" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="https://drive.google.com/file/d/0B946R67_bTZMRHNCSEFIQkx6XzA/view?usp=sharing" class="outline-btn">View full Resume</a>
+                <a href="https://drive.google.com/file/d/1mrPWoLvQe5bRSDdrTbk3MfqdWMy-g30g/view" class="outline-btn">View full Resume</a>
               </div>
             </div>
           </div>
@@ -286,7 +286,7 @@
               <div class="col-md-3">
                   <div class="dark-box box-hover">
                       <h2><i class="fa fa-file"></i><span>My Resume</span></h2>
-                      <p><a href="https://drive.google.com/file/d/1mrPWoLvQe5bRSDdrTbk3MfqdWMy-g30g/view?usp=sharing" target="_blank">View My Resume</a></p>
+                      <p><a href="https://drive.google.com/file/d/1a4b1f2c40mxZNjMYVfqQsxVT791kexDl/view?usp=sharing" target="_blank">View My Resume</a></p>
                   </div>
               </div>
           </div>
