--- a/index.html
+++ b/index.html
@@ -202,28 +202,28 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/Aws s1.png" data-lightbox="roadtrip" title="Capstone Project: Project Expenses Management System"><img class="grayscale" src="img/portfolio/Aws s1.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/Aws s1.png" data-lightbox="roadtrip" title="AWS ACADEMY CERTIFICATE"><img class="grayscale" src="img/portfolio/Aws s1.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/Aws s2.png" data-lightbox="roadtrip" title="LOGO MAKING: COLOR WAVE LOGO"><img class="grayscale" src="img/portfolio/Aws s2.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/Aws s2.png" data-lightbox="roadtrip" title="AWS ACADEMY CERTIFICATE"><img class="grayscale" src="img/portfolio/Aws s2.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/GL.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/GL.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/GL.png" data-lightbox="roadtrip" title="GREAT LERNING CERTIFICATE"><img class="grayscale" src="img/portfolio/GL.png" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/Oracle.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/Oracle.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/Oracle.png" data-lightbox="roadtrip" title="ORACLE CERTIFICATE"><img class="grayscale" src="img/portfolio/Oracle.png" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
