--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <br><br><br>
                 <h1 class="arrow">A little <span>about</span> me</h1>
-                <p>I’m a Freelance Graphic Designer and Web Designer with a strong focus on UI/UX. For me, programming and design are tools to create applications that customers love. I’m not interested in discussing tech stacks just for the sake of it. Instead, I view technology through the lens of improving user experience—whether it’s making an app run faster or designing beautiful, functional interfaces. If a technology can enhance customer experience, I’m eager to explore it. Turning ideas into stunning Android applications and websites is my passion.</p>
+                <p>I'm a Freelance Graphic Designer with a passion for turning ideas into powerful visual stories. I specialize in using Adobe Photoshop and Illustrator to create clean, bold, and professional designs that connect with audiences and elevate brands.
+
+                  From logos and branding to social media graphics, posters, and digital illustrations, I focus on delivering high-quality, purposeful visuals. I believe great design isn’t just about looking good it’s about communicating clearly and making a lasting impression.
+                  
+                  I approach every project with creativity, precision, and a deep understanding of visual storytelling. Whether I’m refining a brand’s identity or crafting a stunning promotional graphic, I use design as a tool to bring ideas to life in the most impactful way possible.</p>
               </div>
             </div>
           </div>
@@ -185,11 +189,11 @@
         </div>
       </div>
     </section>
-        <section class="swag text-center" id="certificate">
+        <section class="swag text-center" id="Portfolio">
           <div class="container">
             <div class="row">
               <h1 class="arrow">
-                Certifications
+                Portfolio
               </h1>
             </div>
           </div>
@@ -199,28 +203,28 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/Aws s1.png" data-lightbox="roadtrip" title="Capstone Project: Project Expenses Management System"><img class="grayscale" src="img/portfolio/Aws s1.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/Banner.png" data-lightbox="roadtrip" title="My Own Banner For My Freelance Graphic Design 1"><img class="grayscale" src="img/portfolio/Banner.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/Aws s2.png" data-lightbox="roadtrip" title="LOGO MAKING: COLOR WAVE LOGO"><img class="grayscale" src="img/portfolio/Aws s2.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/CW 1.png" data-lightbox="roadtrip" title="My Own Banner For My Freelance Graphic Design 2"><img class="grayscale" src="img/portfolio/CW 1.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/GL.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/GL.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/IN1.jpg" data-lightbox="roadtrip" title="My Pass Work During My Internship"><img class="grayscale" src="img/portfolio/IN1.jpg" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="overlay-effect effects clearfix">
                 <div class="img">
-                    <a href="img/portfolio/Oracle.png" data-lightbox="roadtrip" title="LOGO MAKING: PEMS LOGO"><img class="grayscale" src="img/portfolio/Oracle.png" alt="Portfolio Item"></a>
+                    <a href="img/portfolio/IN2.png" data-lightbox="roadtrip" title="My Pass Work During My Internship"><img class="grayscale" src="img/portfolio/IN2.png" alt="Portfolio Item"></a>
                 </div>
             </div>
           </div>
